--- a/MSK_Automotive/src/main/resources/application.properties
+++ b/MSK_Automotive/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8080
 
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/msk_automotive
+spring.datasource.username=root
+spring.datasource.password=root@123
+
+spring.banner.location=classpath:banner.txt
+
+logging.file.name=logs/temp.log
